--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -16,6 +16,7 @@
                     <mat-icon class="example-tab-icon">grain</mat-icon>
                     Registros
                 </ng-template>
+                <app-nvtrsentries></app-nvtrsentries>
             </mat-tab>
         </mat-tab-group>
     </mat-card>
