--- a/src/app/inventories/nvtrsentries/nvtrsentries.component.html
+++ b/src/app/inventories/nvtrsentries/nvtrsentries.component.html
@@ -5,6 +5,7 @@
             {{element.identries}} 
         </td>
     </ng-container>
+    
     <ng-container matColumnDef="idproducts">
         <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let element"> 
@@ -12,12 +13,14 @@
         </td>
     </ng-container>
 
-    <ng-container matColumnDef="total">
-        <th mat-header-cell *matHeaderCellDef> Total </th>
-        <td mat-cell *matCellDef="let element">
-            {{element.total}}
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> 
+            {{element.name}} 
         </td>
     </ng-container>
+
+
 
     <ng-container matColumnDef="unitary_cost">
         <th mat-header-cell *matHeaderCellDef> Costo </th>
@@ -47,6 +50,13 @@
         </td>
     </ng-container>
 
+    <ng-container matColumnDef="total">
+        <th mat-header-cell *matHeaderCellDef> Total </th>
+        <td mat-cell *matCellDef="let element">
+            {{element.total}}
+        </td>
+    </ng-container>
+
     <ng-container matColumnDef="idcompany">
         <th mat-header-cell *matHeaderCellDef> Compañia </th>
         <td mat-cell *matCellDef="let element">
@@ -71,14 +81,15 @@
     <ng-container matColumnDef="date_add">
         <th mat-header-cell *matHeaderCellDef> Fecha Creacion </th>
         <td mat-cell *matCellDef="let element">
-            {{element.date_add}}
+            {{ element.date_add * 1000 | date}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="date_set">
         <th mat-header-cell *matHeaderCellDef> Fecha Modificacion </th>
         <td mat-cell *matCellDef="let element">
-            {{element.date_set}}
+            <!-- {{element.date_set}} -->
+            {{ element.date_set * 1000 | date}}
         </td>
     </ng-container>
 
