--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -52,7 +52,8 @@
           settings_applications
         </i>
       </a>
-      <a routerLink="#">
+      <a routerLink="/users">
+        <!-- mat-list-item href="/products" -->
         <i class="material-icons md-36">
           account_circle
         </i>
