--- a/src/app/products/addset/addset.component.html
+++ b/src/app/products/addset/addset.component.html
@@ -25,6 +25,9 @@
                         <input matInput placeholder='Nombre' [(ngModel)]='model.name' required>
                     </mat-form-field>
                     <mat-form-field>
+                        <input matInput placeholder='Descripción' [(ngModel)]='model.description'>
+                    </mat-form-field>
+                    <mat-form-field>
                         <input matInput placeholder='Código de Barras o clave' name='barcode'
                             [(ngModel)]='model.barcode' required>
                     </mat-form-field>
