--- a/src/app/sales/placeorder/placeorder.component.html
+++ b/src/app/sales/placeorder/placeorder.component.html
@@ -42,7 +42,7 @@
     <table>
         <tr>
             <td>Total Productos</td>
-            <td>{{totalItemsOrder}}</td>
+            <td>{{totalOrderItems}}</td>
         </tr>
         <tr>
             <td>
