--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,3 @@
-<!-- <p>products works!</p> -->
 <div id='divSubMenu'>
   <span style="margin-right: 35px;">
     <button (click)='ProductAdd()' mat-icon-button matTooltip='Agregar nuevo producto'>
@@ -34,8 +33,8 @@
    (selectionChange)="onEventSelection($event.value)"
   -->
   <mat-select [(value)]="selected">
-    <mat-option *ngFor="let i of liststatus" [value]="i.value">
-      {{i.viewValue}}
+    <mat-option *ngFor="let i of liststatus" [value]="i.id">
+      {{i.value}}
     </mat-option>
   </mat-select>
 </mat-form-field>
