--- a/src/app/users/signup/signup.component.css
+++ b/src/app/users/signup/signup.component.css
@@ -1,4 +1,14 @@
-
+.hideComponent{
+  display: none;
+}
+.div-table-container {
+  display: flex; 
+}
+.div-column{
+  display: flex;
+  flex-direction: column;
+  padding-right: 70px;
+}
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
