--- a/src/app/users/signup/signup.component.html
+++ b/src/app/users/signup/signup.component.html
@@ -1,48 +1,39 @@
-<ng-template #dialogRef let-data>
-    <button mat-button (click)="openDialog()" style='display: none;'>Open dialog</button>
-    <div id='divsignchoose'>
-        <mat-card>
-            <mat-card-title>
-                <img src="./../../../assets/imgs/happy_32px.png">
-                Acceder
-            </mat-card-title>
-            <!-- <mat-card-subtitle> Continuar  </mat-card-subtitle> -->
-            <mat-card-content>
-                <div class="div-table-container">
-
-                    <div class="div-column">
-
-                        <mat-form-field appearance='fill'>
-                            <mat-label>Ingresa tú Email</mat-label>
-                            <input matInput placeholder='correo@ejemplo.com' [formControl]='email'
-                                [(ngModel)]='model.email'>
-                            <!-- <input matInput placeholder='correo@ejemplo.com' formControlName='email'
-                                    [(ngModel)]='model.email'>  -->
-                        </mat-form-field>
-                        <mat-form-field>
-                            <input matInput placeholder='Contraseña' name='password' [(ngModel)]='model.password'
-                                type="password">
-                            <input matInput [(ngModel)]='model.id' class="hideComponent">
-                            <input matInput [(ngModel)]='model.idrol' class="hideComponent">
-                            <input matInput [(ngModel)]='model.date_add' class="hideComponent">
-                        </mat-form-field>
-                        <div>
-                            <button mat-button color='accent' (click)='onForwardPassword()'> ¿Olvidaste la
-                                contraseña?</button>
-                        </div>
-                    </div>
-
-                </div>
-            </mat-card-content>
-            <mat-card-actions>
-                <!-- <button mat-stroked-button color='accent' (click)='onShowAccountDiv()'>Crear cuenta</button> -->
-                <button mat-stroked-button color='accent' (click)='onSignin()'>Ingresar</button>
+<mat-card>
+    <mat-card-title>
+        Inicio de Sesión
+    </mat-card-title>
+    <mat-card-content>
+        <form [formGroup]='loginForm' (ngSubmit)='onSignin()'>
+            <p>
+                <mat-form-field appearance='fill'>
+                    <mat-label>Ingresa tú Email</mat-label>
+                    <input matInput formControlName='email' placeholder='correo@ejemplo.com'>
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input matInput type="password" formControlName='password' placeholder='Contraseña'>
+                </mat-form-field>
+            </p>
+            <div>
+                <button mat-button color='accent' (click)='onForwardPassword()'> ¿Olvidaste la
+                    contraseña?</button>
+            </div>
+            <div>
+                <button [disabled]="!loginForm.valid" type='submit' mat-stroked-button color='accent'>Ingresar</button>
+            </div>
+            <div>
                 <button mat-stroked-button color='warn' (click)='onCancel()'>Cancelar</button>
-            </mat-card-actions>
-        </mat-card>
-    </div>
+            </div>
+        </form>
+    </mat-card-content>
+</mat-card>
 
-    <!-- <div id='divsignup' class="hideComponent">
+
+
+
+
+<!-- <div id='divsignup' class="hideComponent">
         <mat-card>
             <mat-card-title>Usuario </mat-card-title>
             <mat-card-subtitle> Bienvenido {{model.name}} </mat-card-subtitle>
@@ -72,7 +63,7 @@
         </mat-card>
     </div> -->
 
-    <!-- <div id='divsignin'>
+<!-- <div id='divsignin'>
         <mat-card>
             <mat-card-title>
                 <img src="./../../../assets/imgs/key_32px.png"> Ingresar </mat-card-title>
@@ -100,4 +91,4 @@
             </mat-card-actions>
         </mat-card>
     </div> -->
-</ng-template>
+<!-- </ng-template> -->
